# Luna

./: .gitignore  README.md  io.github.kingorgg.Luna.json  luna.doap  makefile  meson.build
.github/workflows/: ci.yml  flatpak.yml  nightly.yml  rpm.yml
data/: io.github.kingorgg.Luna.desktop.in  io.github.kingorgg.Luna.gschema.xml  io.github.kingorgg.Luna.metainfo.xml.in  io.github.kingorgg.Luna.service.in  meson.build
data/icons/: meson.build
data/ui/: day_row.blp  delete_period_dialog.blp  meson.build  period_page.blp  window.blp
packaging/rpm/: luna.spec.in
po/: LINGUAS  POTFILES.in  de.po  en_GB.po  es.po  fr.po  hu.po  io.github.kingorgg.Luna.pot  it.po  meson.build  ru.po  tl.po  tr.po
src/: constants.py  data_store.py  day_row.py  delete_period_dialog.py  logic.py  luna.gresource.xml  luna.in  main.py  meson.build  migration.py  models.py  new_period.blp  new_period.py  period_page.py  sqlite_store.py  storage.py  window.blp  window.py  window.ui
tests/: test_data_store.py  test_logic.py  test_models.py  test_sqlite_store.py  test_storage.py
