pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
moduledir = pkgdatadir / 'luna'
gnome = import('gnome')

blueprints = custom_target('blueprints',
    input: files(
        'window.blp',
	),
    output: [
        'window.ui',
    ],
    command: [
    find_program('blueprint-compiler'),
    'batch-compile',
    meson.current_build_dir(),
    meson.current_source_dir(),
    '@INPUT@'
  ],
)

gnome.compile_resources('luna',
    'luna.gresource.xml',
     gresource_bundle: true,
     dependencies: blueprints,
     install: true,
     install_dir: pkgdatadir,
)

python = import('python')

conf = configuration_data()
conf.set('PYTHON', python.find_installation('python3').full_path())
conf.set('VERSION', meson.project_version())
conf.set('localedir', get_option('prefix') / get_option('localedir'))
conf.set('pkgdatadir', pkgdatadir)

configure_file(
     input: 'luna.in',
     output: 'luna',
     configuration: conf,
     install: true,
     install_dir: get_option('bindir'),
     install_mode: 'r-xr-xr-x'
)

luna_sources = [
     '__init__.py',
     'main.py',
     'window.py',
]

install_data(luna_sources, install_dir: moduledir)
